kubernetes/k3s-prod-a/photoprism/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
spec:
  type: ClusterIP
  ports:
    - port: 2342
      targetPort: 2342
      protocol: TCP
  selector:
    app: photoprism
