kubernetes/k3s-prod-a/photoprism/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: photoprism
  namespace: photoprism
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photoprism.l.47fc5c.com`)
      kind: Rule
      services:
        - name: photoprism
          kind: Service
          port: 2342
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
